feat: add user type to me
