# priv/static/swagger.json
@@ -5,6 +5,201 @@
   },
   "host": "localhost:4000",
   "definitions": {
+    "User": {
+      "description": "User schema",
+      "example": {
+        "user": {
+          "email": "a114437@alunos.uminho.pt",
+          "id": "d18472e7-5251-4027-884f-58b8a3a6abe5",
+          "inserted_at": "2025-07-15T18:10:27Z",
+          "name": "Leonardo Carvalho",
+          "updated_at": "2025-07-15T18:10:27Z"
+        }
+      },
+      "properties": {
+        "email": {
+          "description": "User email",
+          "type": "string"
+        },
+        "id": {
+          "description": "User ID",
+          "type": "integer"
+        },
+        "inserted_at": {
+          "description": "Creation timestamp",
+          "format": "date-time",
+          "type": "string"
+        },
+        "name": {
+          "description": "User name",
+          "type": "string"
+        },
+        "type": {
+          "description": "User type",
+          "type": "string"
+        },
+        "updated_at": {
+          "description": "Last update timestamp",
+          "format": "date-time",
+          "type": "string"
+        }
+      },
+      "required": [
+        "type",
+        "updated_at",
+        "email",
+        "inserted_at",
+        "id"
+      ],
+      "title": "User",
+      "type": "object"
+    },
+    "SignInResponse": {
+      "description": "Response schema for successful sign in",
+      "example": {
+        "access_token": "xXxXxXxXxXxX",
+        "session_id": "e1387cae-ac1d-4aeb-8e13-ff1b3dd15ca4"
+      },
+      "properties": {
+        "access_token": {
+          "description": "Access token",
+          "type": "string"
+        },
+        "session_id": {
+          "description": "User session ID",
+          "type": "integer"
+        }
+      },
+      "required": [
+        "access_token",
+        "session_id"
+      ],
+      "title": "SignInResponse",
+      "type": "object"
+    },
+    "UnauthorizedResponse": {
+      "description": "Unauthorized response schema",
+      "properties": {
+        "error": {
+          "description": "Unauthorized error message",
+          "type": "string"
+        }
+      },
+      "required": [
+        "error"
+      ],
+      "title": "UnauthorizedResponse",
+      "type": "object"
+    },
+    "ErrorResponse": {
+      "description": "Error response schema",
+      "properties": {
+        "error": {
+          "description": "Error message",
+          "type": "string"
+        }
+      },
+      "required": [
+        "error"
+      ],
+      "title": "ErrorResponse",
+      "type": "object"
+    },
+    "SuccessfulRefreshResponse": {
+      "description": "Response schema for successful token refresh",
+      "example": {
+        "access_token": "xXxXxXxXxXxX"
+      },
+      "properties": {
+        "access_token": {
+          "description": "New access token",
+          "type": "string"
+        }
+      },
+      "required": [
+        "access_token"
+      ],
+      "title": "SuccessfulRefreshResponse",
+      "type": "object"
+    },
+    "SignOutResponse": {
+      "description": "Response schema for successful sign out",
+      "example": {
+        "message": "Signed out successfully"
+      },
+      "properties": {
+        "message": {
+          "description": "Message indicating successful sign out",
+          "type": "string"
+        }
+      },
+      "required": [
+        "message"
+      ],
+      "title": "SignOutResponse",
+      "type": "object"
+    },
+    "UserSessionsResponse": {
+      "description": "Response schema for a list of user sessions",
+      "example": {
+        "sessions": [
+          {
+            "first_seen": "2025-07-15T20:13:41Z",
+            "id": "8fd2bef3-f1eb-4bf2-aade-f3ae80e0563d",
+            "ip": "127.0.0.1",
+            "user_agent": "Mozilla/5.0 (X11; Linux x86_64; rv:139.0) Gecko/20100101 Firefox/139.0",
+            "user_browser": "Firefox",
+            "user_os": "Linux"
+          }
+        ]
+      },
+      "properties": {
+        "sessions": {
+          "description": "List of user sessions",
+          "items": {
+            "$ref": "#/definitions/UserSession"
+          },
+          "type": "array"
+        }
+      },
+      "required": [
+        "sessions"
+      ],
+      "title": "UserSessionsResponse",
+      "type": "object"
+    },
+    "NoContentResponse": {
+      "description": "Response schema for no content",
+      "example": {},
+      "properties": {
+        "message": {
+          "description": "Message indicating no content",
+          "type": "string"
+        }
+      },
+      "required": [
+        "message"
+      ],
+      "title": "NoContentResponse",
+      "type": "object"
+    },
+    "ResetPasswordResponse": {
+      "description": "Response schema for successful password reset",
+      "example": {
+        "message": "Password reset successfully"
+      },
+      "properties": {
+        "message": {
+          "description": "Message indicating successful password reset",
+          "type": "string"
+        }
+      },
+      "required": [
+        "message"
+      ],
+      "title": "ResetPasswordResponse",
+      "type": "object"
+    },
     "UserSession": {
       "description": "User session schema",
       "properties": {
@@ -45,194 +240,29 @@
       "title": "User Session",
       "type": "object"
     },
-    "ErrorResponse": {
-      "description": "Error response schema",
+    "JobsResponse": {
+      "description": "Response containing a list of jobs",
       "properties": {
-        "error": {
-          "description": "Error message",
-          "type": "string"
-        }
-      },
-      "required": [
-        "error"
-      ],
-      "title": "ErrorResponse",
-      "type": "object"
-    },
-    "NoContentResponse": {
-      "description": "Response schema for no content",
-      "example": {},
-      "properties": {
-        "message": {
-          "description": "Message indicating no content",
-          "type": "string"
-        }
-      },
-      "required": [
-        "message"
-      ],
-      "title": "NoContentResponse",
-      "type": "object"
-    },
-    "ResetPasswordResponse": {
-      "description": "Response schema for successful password reset",
-      "example": {
-        "message": "Password reset successfully"
-      },
-      "properties": {
-        "message": {
-          "description": "Message indicating successful password reset",
-          "type": "string"
-        }
-      },
-      "required": [
-        "message"
-      ],
-      "title": "ResetPasswordResponse",
-      "type": "object"
-    },
-    "SignInResponse": {
-      "description": "Response schema for successful sign in",
-      "example": {
-        "access_token": "xXxXxXxXxXxX",
-        "session_id": "e1387cae-ac1d-4aeb-8e13-ff1b3dd15ca4"
-      },
-      "properties": {
-        "access_token": {
-          "description": "Access token",
-          "type": "string"
-        },
-        "session_id": {
-          "description": "User session ID",
-          "type": "integer"
-        }
-      },
-      "required": [
-        "access_token",
-        "session_id"
-      ],
-      "title": "SignInResponse",
-      "type": "object"
-    },
-    "SignOutResponse": {
-      "description": "Response schema for successful sign out",
-      "example": {
-        "message": "Signed out successfully"
-      },
-      "properties": {
-        "message": {
-          "description": "Message indicating successful sign out",
-          "type": "string"
-        }
-      },
-      "required": [
-        "message"
-      ],
-      "title": "SignOutResponse",
-      "type": "object"
-    },
-    "SuccessfulRefreshResponse": {
-      "description": "Response schema for successful token refresh",
-      "example": {
-        "access_token": "xXxXxXxXxXxX"
-      },
-      "properties": {
-        "access_token": {
-          "description": "New access token",
-          "type": "string"
-        }
-      },
-      "required": [
-        "access_token"
-      ],
-      "title": "SuccessfulRefreshResponse",
-      "type": "object"
-    },
-    "UnauthorizedResponse": {
-      "description": "Unauthorized response schema",
-      "properties": {
-        "error": {
-          "description": "Unauthorized error message",
-          "type": "string"
-        }
-      },
-      "required": [
-        "error"
-      ],
-      "title": "UnauthorizedResponse",
-      "type": "object"
-    },
-    "User": {
-      "description": "User schema",
-      "example": {
-        "user": {
-          "email": "a114437@alunos.uminho.pt",
-          "id": "d18472e7-5251-4027-884f-58b8a3a6abe5",
-          "inserted_at": "2025-07-15T18:10:27Z",
-          "name": "Leonardo Carvalho",
-          "updated_at": "2025-07-15T18:10:27Z"
-        }
-      },
-      "properties": {
-        "email": {
-          "description": "User email",
-          "type": "string"
-        },
-        "id": {
-          "description": "User ID",
-          "type": "integer"
-        },
-        "inserted_at": {
-          "description": "Creation timestamp",
-          "format": "date-time",
-          "type": "string"
-        },
-        "name": {
-          "description": "User name",
-          "type": "string"
-        },
-        "updated_at": {
-          "description": "Last update timestamp",
-          "format": "date-time",
-          "type": "string"
-        }
-      },
-      "required": [
-        "updated_at",
-        "email",
-        "inserted_at",
-        "id"
-      ],
-      "title": "User",
-      "type": "object"
-    },
-    "UserSessionsResponse": {
-      "description": "Response schema for a list of user sessions",
-      "example": {
-        "sessions": [
-          {
-            "first_seen": "2025-07-15T20:13:41Z",
-            "id": "8fd2bef3-f1eb-4bf2-aade-f3ae80e0563d",
-            "ip": "127.0.0.1",
-            "user_agent": "Mozilla/5.0 (X11; Linux x86_64; rv:139.0) Gecko/20100101 Firefox/139.0",
-            "user_browser": "Firefox",
-            "user_os": "Linux"
-          }
-        ]
-      },
-      "properties": {
-        "sessions": {
-          "description": "List of user sessions",
+        "jobs": {
+          "description": "List of jobs",
           "items": {
-            "$ref": "#/definitions/UserSession"
+            "$ref": "#/definitions/Job"
           },
           "type": "array"
         }
       },
-      "required": [
-        "sessions"
-      ],
-      "title": "UserSessionsResponse",
+      "title": "JobsResponse",
+      "type": "object"
+    },
+    "JobResponse": {
+      "description": "Response containing a single job",
+      "properties": {
+        "job": {
+          "$ref": "#/definitions/Job",
+          "description": "Details of the job"
+        }
+      },
+      "title": "JobResponse",
       "type": "object"
     },
     "Job": {
@@ -282,31 +312,6 @@
       "title": "Job",
       "type": "object"
     },
-    "JobResponse": {
-      "description": "Response containing a single job",
-      "properties": {
-        "job": {
-          "$ref": "#/definitions/Job",
-          "description": "Details of the job"
-        }
-      },
-      "title": "JobResponse",
-      "type": "object"
-    },
-    "JobsResponse": {
-      "description": "Response containing a list of jobs",
-      "properties": {
-        "jobs": {
-          "description": "List of jobs",
-          "items": {
-            "$ref": "#/definitions/Job"
-          },
-          "type": "array"
-        }
-      },
-      "title": "JobsResponse",
-      "type": "object"
-    },
     "SuccessfulImport": {
       "description": "Response for a successful import",
       "properties": {
@@ -325,6 +330,13 @@
       ],
       "title": "SuccessfulImport",
       "type": "object"
+    }
+  },
+  "securityDefinitions": {
+    "Bearer": {
+      "in": "header",
+      "name": "Authorization",
+      "type": "apiKey"
     }
   },
   "paths": {
@@ -694,12 +706,5 @@
       }
     }
   },
-  "swagger": "2.0",
-  "securityDefinitions": {
-    "Bearer": {
-      "in": "header",
-      "name": "Authorization",
-      "type": "apiKey"
-    }
-  }
+  "swagger": "2.0"
 }
